# qpdfImageEmbed

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  imageProvider.cpp  imageProvider.h  main.cc  main.cpp  options.h  qpdfImageEmbed.kdev4
src/: CMakeLists.txt  config.h.in  extraText.cpp  extraText.h  imageProvider.cpp  imageProvider.h  logger.cpp  logger.h  main.cpp  options.cpp  options.h  pdfProcessor.cpp  pdfProcessor.h  point.cpp  point.h  rect.cpp  rect.h
